refactor(Student Asset): Update post student asset endpoint (#133)